# mna-multi-agent

./: .gitignore  README.md  group_agents.py
autogen/: Microsoft_Acquisition_Strategy_Agriculture.md  agent2.py  agent3.py  agent3n4.py  agent4.py  app.py  app_2.py  app_3.py  companies.csv  configs.py  main.py  output.md  prompts.py  requirements.txt  tools.py  user_info.md  web search.py  wsearcher.py
autogen/outputs/: companies.json  critic_companies.json  recommendation.md  valuation.md
autogen/outputs/fmp_data/: CRNC_fmp.json  SPT_fmp.json  SUMO_fmp.json
autogen/utils/: __init__.py  read_markdown.py
sample_code/basic_project/: README.md  pyproject.toml
sample_code/basic_project/src/basic_project/: crew.py  main.py
sample_code/meeting_prep_crew/src/: tasks.py
